Added new Minecraft Versions and fixed CSS

--- a/public/templates/index.html
+++ b/public/templates/index.html
@@ -12,7 +12,7 @@
   <link rel="shortcut icon" href="/favicon.png">
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <link href='//fonts.googleapis.com/css?family=Source+Code+Pro' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="//bootswatch.com/cyborg/bootstrap.min.css">
+  <link rel="stylesheet" href="//bootswatch.com/3/cyborg/bootstrap.min.css">
   <link rel="stylesheet" href="/css/style.css">
 
 </head>
